--- a/src/scss/modules/_footer.scss
+++ b/src/scss/modules/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   padding: 16px 0;
   border-top: 2px solid #EDF9FF;
-  background: #FFF;
+  background: $white_color;
   position: relative;
   z-index: 1;
   // inherits
