--- a/src/scss/modules/_vars.scss
+++ b/src/scss/modules/_vars.scss
@@ -1,6 +1,8 @@
 // # Colors
+$white_color: #FFFFFF;
 $blue_color: #1DA1E2;
-$black_color: #0E0E0E;
+$dark_color: #0E0E0E;
+$black_color: #000000;
 
 $bp_sizes: (
   sm: 0,
