--- a/src/scss/pages/home/_carousel.scss
+++ b/src/scss/pages/home/_carousel.scss
@@ -72,8 +72,8 @@
       align-self: flex-start;
       padding: 19px 34px;
       border-radius: 4px;
-      background-color: #1DA1E2;
-      color: #FFF;
+      background-color: $blue_color;
+      color: $white_color;
       font-size: 13px;
       font-style: normal;
       font-weight: 800;
