--- a/src/scss/pages/home/_viewed.scss
+++ b/src/scss/pages/home/_viewed.scss
@@ -28,7 +28,7 @@
     flex: 1 0 auto;
     max-width: calc(100% / 4 - 22.5px);
     border-radius: 10px;
-    background: #FFF;
+    background: $white_color;
     box-shadow: 0 13px 50px -10px rgba(26, 77, 102, 0.60);
     position: relative;
     z-index: 2;
