--- a/src/scss/modules/_reset.scss
+++ b/src/scss/modules/_reset.scss
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  color: $black_color;
+  color: $dark_color;
   font-family: 'RF Dewi', sans-serif;
   font-size: 1rem;
   font-weight: 400;
