--- a/src/pug/about.pug
+++ b/src/pug/about.pug
@@ -1,59 +1,54 @@
-extends ./templates/_layout
+extends layouts/_base_layout
+include ./mixins/utils/_image
 
 block variables
   - var title = "О компании"
+  - var description = "Страница описания компании"
+  - var canonical = "/about.html"
   - var breaditems = [{ text: title }]
 
 block head
   link(href="./src/scss/about.page.scss" rel="stylesheet")
 
 block content
-  include ./mixins/utils/_image
-  main.content(role="main")
-    .container
-      include ./mixins/_breadcrumbs
-      +breadcrumbs(breaditems)
-
-      h1.page-title #{title}
-
-      section.about-company
-        article.about-company__item
-          .about-company__image
-            +image("image-asset 1.png", "./images/about/")
-          .about-company__content
-            h2.about-company__title О компании «Дом Карнизов»
-            .about-company__description
-              p Интернет-магазин рад предложить вам нарядные шторы, воздушные занавески, респектабельные портьеры и надежные карнизы самых разных конструкций. В нашем ассортименте также представлены солнцезащитные системы: алюминиевые жалюзи, шторы «блэкаут», пластиковые жалюзи, бамбуковые шторы и многие другие варианты. С 2005 года мы поставляем продукцию высокого качества, которая украшает ваш дом и делает его еще более уютным и комфортным.
-              p Мы специализируемся на продаже карнизов, поэтому у нас вы сможете выбрать и заказать любые модели:
-              ul.custom-marks
-                li телескопические витражные для нестандартных окон;
-                li бюджетные пластиковые для однорядных и многорядных занавесок;
-                li прочные металлические для тяжелых портьер;
-                li классические деревянные.
-              p В дополнение к карнизам вы можете подобрать готовые комплекты штор для гостиной, спальни, кухни, детской и других комнат. Над созданием удачных комбинаций текстиля для вас работали лучшие дизайнеры известных брендов. Качественные фото в нашем каталоге помогут вам представить, насколько удачно та или иная модель впишется в интерьер. Для офисов и концептуальных современных интерьеров мы предлагаем практичные жалюзи и рулонные шторы.
-        article.about-company__item
-          .about-company__image
-            +image("image-asset 2.png", "./images/about/")
-          .about-company__content
-            h2.about-company__title События
-            .about-company__description
-              p <strong>2014 г.</strong> Мы начинаем развивать собственную складскую коллекцию Elegancia, ориентируясь на международные стандарты качества и безопасности в текстильной индустрии
-              p <strong>2015 г.</strong> Активно делимся опытом со своими клиентами через серию он-лайн  вебинаров и выездных мероприятий на тему «Формула успеха».
-              p <strong>2016 г.</strong> Мы революционно меняем политику ценообразования, устанавливая единую розничную рублевую цену,  формируя цивилизованный контролируемый  рынок интерьерного текстиля.
-              p <strong>2017 г.</strong> Мы запускаем  первый профессиональный текстильный  канал  TEXTILE TV, объединяя через еженедельные вещания более 1500 дизайнеров и декораторов по всей России и СНГ.
-              p <strong>2018 г.</strong> Открываем пять современных шоу-румов в разных районах Москвы, создавая дизайнерам, не имеющим собственных салонов, комфортные условия для работы с конечными заказчиками.
-              p <strong>2019 г.</strong> Благодаря первому на текстильном рынке в России альянсу двух крупнейших игроков, компаний Daylight и Liontex, мы создаем уникальное предложение для клиентов по складской программе на базе трех взаимодополняющих брендов: Elegancia, NEVIO, Me Casa.
-        article.about-company__item
-          .about-company__image
-            +image("image-asset 3.png", "./images/about/")
-          .about-company__content
-            h2.about-company__title Цели и принципы
-            .about-company__description
-              p Главное достояние за 20 лет это наши клиенты.
-              p Мы открыты для сотрудничества для всех компаний и частных дизайнеров, для всех профессионалов текстильного рынка, кто разделяет наши важные принципы и ценности:
-              ul(style="list-style: decimal; padding-left: 18px;")
-                li Стремление к развитию в своей области, к новым знаниям, к прогрессивным идеям, к расширению горизонтов.
-                li Честность и открытость к общению, к обмену информацией, умению располагать к себе заказчиков и партнеров.
-                li Финансовая стабильность своих клиентов путем контроля единой розничной цены на весь ассортимент компании.
-                li Ответственность, прежде всего за свои обещания и действия перед сотрудниками, заказчиками и деловыми партнерами.
-                li Восприимчивость ко всему новому, прогрессивному; первыми реализовывать новые идеи в бизнесе и этим всегда отличаться от конкурентов.
+  .about-company
+    article.about-company__item
+      .about-company__image
+        +image("image-asset 1.png", "./images/about/")
+      .about-company__content
+        h2.about-company__title О компании «Дом Карнизов»
+        .about-company__description
+          p Интернет-магазин рад предложить вам нарядные шторы, воздушные занавески, респектабельные портьеры и надежные карнизы самых разных конструкций. В нашем ассортименте также представлены солнцезащитные системы: алюминиевые жалюзи, шторы «блэкаут», пластиковые жалюзи, бамбуковые шторы и многие другие варианты. С 2005 года мы поставляем продукцию высокого качества, которая украшает ваш дом и делает его еще более уютным и комфортным.
+          p Мы специализируемся на продаже карнизов, поэтому у нас вы сможете выбрать и заказать любые модели:
+          ul.custom-marks
+            li телескопические витражные для нестандартных окон;
+            li бюджетные пластиковые для однорядных и многорядных занавесок;
+            li прочные металлические для тяжелых портьер;
+            li классические деревянные.
+          p В дополнение к карнизам вы можете подобрать готовые комплекты штор для гостиной, спальни, кухни, детской и других комнат. Над созданием удачных комбинаций текстиля для вас работали лучшие дизайнеры известных брендов. Качественные фото в нашем каталоге помогут вам представить, насколько удачно та или иная модель впишется в интерьер. Для офисов и концептуальных современных интерьеров мы предлагаем практичные жалюзи и рулонные шторы.
+    article.about-company__item
+      .about-company__image
+        +image("image-asset 2.png", "./images/about/")
+      .about-company__content
+        h2.about-company__title События
+        .about-company__description
+          p <strong>2014 г.</strong> Мы начинаем развивать собственную складскую коллекцию Elegancia, ориентируясь на международные стандарты качества и безопасности в текстильной индустрии
+          p <strong>2015 г.</strong> Активно делимся опытом со своими клиентами через серию он-лайн  вебинаров и выездных мероприятий на тему «Формула успеха».
+          p <strong>2016 г.</strong> Мы революционно меняем политику ценообразования, устанавливая единую розничную рублевую цену,  формируя цивилизованный контролируемый  рынок интерьерного текстиля.
+          p <strong>2017 г.</strong> Мы запускаем  первый профессиональный текстильный  канал  TEXTILE TV, объединяя через еженедельные вещания более 1500 дизайнеров и декораторов по всей России и СНГ.
+          p <strong>2018 г.</strong> Открываем пять современных шоу-румов в разных районах Москвы, создавая дизайнерам, не имеющим собственных салонов, комфортные условия для работы с конечными заказчиками.
+          p <strong>2019 г.</strong> Благодаря первому на текстильном рынке в России альянсу двух крупнейших игроков, компаний Daylight и Liontex, мы создаем уникальное предложение для клиентов по складской программе на базе трех взаимодополняющих брендов: Elegancia, NEVIO, Me Casa.
+    article.about-company__item
+      .about-company__image
+        +image("image-asset 3.png", "./images/about/")
+      .about-company__content
+        h2.about-company__title Цели и принципы
+        .about-company__description
+          p Главное достояние за 20 лет это наши клиенты.
+          p Мы открыты для сотрудничества для всех компаний и частных дизайнеров, для всех профессионалов текстильного рынка, кто разделяет наши важные принципы и ценности:
+          ul(style="list-style: decimal; padding-left: 18px;")
+            li Стремление к развитию в своей области, к новым знаниям, к прогрессивным идеям, к расширению горизонтов.
+            li Честность и открытость к общению, к обмену информацией, умению располагать к себе заказчиков и партнеров.
+            li Финансовая стабильность своих клиентов путем контроля единой розничной цены на весь ассортимент компании.
+            li Ответственность, прежде всего за свои обещания и действия перед сотрудниками, заказчиками и деловыми партнерами.
+            li Восприимчивость ко всему новому, прогрессивному; первыми реализовывать новые идеи в бизнесе и этим всегда отличаться от конкурентов.
