--- a/src/pug/designer.pug
+++ b/src/pug/designer.pug
@@ -1,21 +1,16 @@
-extends ./templates/_layout
+extends layouts/_base_layout
 
 block variables
   - var title = "Конструктор"
-  - var breaditems = [{ text: "Конструтор" }]
+  - var description = "Страница конструктора продукта"
+  - var canonical = "/delivery.html"
+  - var breaditems = [{ text: "Конструктор" }]
 
 block head
   link(href="./src/scss/designer.page.scss" rel="stylesheet")
 
 block content
-  main.content(role="main")
-    .container
-      include ./mixins/_breadcrumbs
-      +breadcrumbs(breaditems)
-
-      h1.page-title Конструктор карниза
-
-      include ./parts/designer/_wrapper
+  include ./parts/designer/_wrapper
 
 block scripts
   script(src="./src/ts/designer.page.ts" type="module")
