--- a/src/pug/templates/header/_header_top.pug
+++ b/src/pug/templates/header/_header_top.pug
@@ -3,7 +3,7 @@
     .container
       .header-top__shell
         .header-top__main
-          a.header-top__about(href="/") О компании
+          a.header-top__about(href="/about.html") О компании
           .header-top__auth
             a.header-top__auth__link(href="/signup.html")
               svg(fill="none", height="21", viewBox="0 0 15 21", width="15", xmlns="http://www.w3.org/2000/svg")
