--- a/src/scss/home.page.scss
+++ b/src/scss/home.page.scss
@@ -1,5 +1,4 @@
-@use "owl.carousel/dist/assets/owl.carousel.min";
-
+@import "owl.carousel/dist/assets/owl.carousel.min.css";
 @import "./modules/vars";
 @import "./pages/home/categories";
 @import "./pages/home/carousel";
