--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,8 +1,8 @@
-//@import url("http://localhost:5173/fonts/RF-Dewi/font.css");
-
 @import 'sanitize.css';
 @import "./modules/vars";
 @import "./modules/reset";
 @import "./modules/utils";
 @import "./modules/header";
 @import "./modules/footer";
+@import "./modules/breadcrumbs";
+@import "./modules/info_cards";
