Новая страница и адаптив для прошлых
- Страница Галерея работ и адаптив для страниц из прошлого коммита

--- a/src/pug/templates/_header.pug
+++ b/src/pug/templates/_header.pug
@@ -1,8 +1,8 @@
 -
   var navigation = [
-    { text: "Галерея работ", link: "#" },
+    { text: "Галерея работ", link: "/our-works.html" },
     { text: "Конструктор", link: "/designer.html" },
-    { text: "Услуги", link: "#" },
+    { text: "Услуги", link: "/services.html" },
     { text: "Прайс", link: "/price.html" },
     { text: "Оплата", link: "/payment.html" },
     { text: "Доставка", link: "/delivery.html" }
@@ -15,7 +15,7 @@
     { text: "Аксессуары", link: "#" },
     { text: "Портфолио", link: "#" },
     { text: "Конструктор", link: "/designer.html" },
-    { text: "Услуги", link: "#" },
+    { text: "Услуги", link: "/services.html" },
     { text: "Оплата", link: "/payment.html" },
     { text: "Доставка", link: "/delivery.html" },
   ]
