--- a/src/scss/modules/_header.scss
+++ b/src/scss/modules/_header.scss
@@ -251,7 +251,7 @@
       border-radius: 4px;
       border: 1px solid $blue_color;
       outline: none;
-      background-color: #fff;
+      background-color: #FFF;
       color: $blue_color;
       font-family: 'RF Dewi', sans-serif;
       font-size: 0.75rem;
@@ -320,7 +320,7 @@
       left: 0;
       top: calc(100% + 5px);
       padding: 9px 16px;
-      background-color: #fff;
+      background-color: #FFF;
       z-index: 9999;
       min-width: 200px;
       max-width: 300px;
@@ -488,7 +488,10 @@
       position: absolute;
       right: 0;
       top: 0;
-      //transform: translateX(15px);
+
+      &__shell {
+        max-width: 100%;
+      }
     }
   }
 
