--- a/src/scss/modules/_utils.scss
+++ b/src/scss/modules/_utils.scss
@@ -32,3 +32,13 @@
     margin: 32px 0;
   }
 }
+
+.page-subtitle {
+  color: #000;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 150%;
+  max-width: 760px;
+  margin: 0 auto 60px;
+}
