Правки по структуре и конфигу

--- a/src/pug/delivery.pug
+++ b/src/pug/delivery.pug
@@ -4,11 +4,11 @@ include ./mixins/utils/_image
 block variables
   - var title = "Доставка"
   - var description = "Страница доставки товаров"
-  - var canonical = "/delivery.html"
+  - var canonical = "/delivery"
   - var breaditems = [{ text: title }]
 
 block head
-  link(href="./src/scss/delivery.page.scss" rel="stylesheet")
+  link(href="/src/scss/delivery.page.scss" rel="stylesheet")
 
 block content
   .info-cards__wrapper
