--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -6,7 +6,7 @@ block variables
   - var canonical = "/"
 
 block head
-  link(href="./src/scss/home.page.scss" rel="stylesheet")
+  link(href="/src/scss/home.page.scss" rel="stylesheet")
   script(src="https://code.jquery.com/jquery-3.7.0.min.js")
 
 block main
@@ -14,4 +14,4 @@ block main
   include ./parts/home/_viewed
 
 block scripts
-  script(src="./src/ts/home.page.ts" type="module")
+  script(src="/src/ts/home.page.ts" type="module")
