--- a/src/pug/payment.pug
+++ b/src/pug/payment.pug
@@ -4,11 +4,11 @@ include ./mixins/utils/_image
 block variables
   - var title = "Оплата"
   - var description = "Страница информации об оплате"
-  - var canonical = "/payment.html"
+  - var canonical = "/payment"
   - var breaditems = [{ text: title }]
 
 block head
-  link(href="./src/scss/payment.page.scss" rel="stylesheet")
+  link(href="/src/scss/payment.page.scss" rel="stylesheet")
 
 
 
