--- a/src/pug/signup.pug
+++ b/src/pug/signup.pug
@@ -3,11 +3,11 @@ extends layouts/_base_layout
 block variables
   - var title = "Регистрация"
   - var description = "Страница регистрации"
-  - var canonical = "/signup.html"
+  - var canonical = "/signup"
   - var breaditems = [{ text: title }]
 
 block head
-  link(href="./src/scss/auth.page.scss" rel="stylesheet")
+  link(href="/src/scss/auth.page.scss" rel="stylesheet")
 
 block content
   .auth__wrapper
@@ -41,4 +41,4 @@ block content
       a.auth__suggest__link(href="/signin.html") Войти
 
 block scripts
-  script(src="./src/ts/auth.page.ts" type="module")
+  script(src="/src/ts/auth.page.ts" type="module")
