--- a/src/pug/templates/_header.pug
+++ b/src/pug/templates/_header.pug
@@ -12,7 +12,7 @@
     { text: "Карнизы", link: "#" },
     { text: "Ткани", link: "#" },
     { text: "Солнцезащита", link: "#" },
-    { text: "Аксессуары", link: "#" },
+    { text: "Аксессуары", link: "/taxonomy.html" },
     { text: "Портфолио", link: "#" },
     { text: "Конструктор", link: "/designer.html" },
     { text: "Услуги", link: "/services.html" },
