--- a/src/pug/about.pug
+++ b/src/pug/about.pug
@@ -4,11 +4,11 @@ include ./mixins/utils/_image
 block variables
   - var title = "О компании"
   - var description = "Страница описания компании"
-  - var canonical = "/about.html"
+  - var canonical = "/about"
   - var breaditems = [{ text: title }]
 
 block head
-  link(href="./src/scss/about.page.scss" rel="stylesheet")
+  link(href="/src/scss/about.page.scss" rel="stylesheet")
 
 block content
   .about-company
