--- a/src/pug/checkout.pug
+++ b/src/pug/checkout.pug
@@ -4,7 +4,7 @@ include ./mixins/utils/_image
 block variables
   - var title = "Оформление заказа"
   - var description = "Страница оформления заказа"
-  - var canonical = "/checkout.html"
+  - var canonical = "/checkout"
   - var breaditems = [{ text: "Карнизы" }]
   -
     var orders = [
@@ -34,7 +34,7 @@ block variables
               })()
 
 block head
-  link(href="./src/scss/checkout.page.scss" rel="stylesheet")
+  link(href="/src/scss/checkout.page.scss" rel="stylesheet")
 
 block content
   table.order-table
@@ -72,4 +72,4 @@ block content
         td(colspan="2").order-table__total К оплате: <span>#{total} руб.</span>
 
 block scripts
-  script(src="./src/ts/checkout.page.ts")
+  script(src="/src/ts/checkout.page.ts")
