--- a/src/pug/services.pug
+++ b/src/pug/services.pug
@@ -4,11 +4,11 @@ include ./mixins/utils/_image
 block variables
   - var title = "Услуги"
   - var description = "Страница услуг компании"
-  - var canonical = "/services.html"
+  - var canonical = "/services"
   - var breaditems = [{ text: title }]
 
 block head
-  link(href="./src/scss/services.page.scss" rel="stylesheet")
+  link(href="/src/scss/services.page.scss" rel="stylesheet")
 
 block subtitle
   p.page-subtitle Дом Карнизов - интернет - магазин карнизов и комплектующих. Так же мы оказываем полный спектр услуг по декорированию помещений, который включает в себя:  выезд дизайнера с образцами на объект, выезд замерщика, индивидуальное изготовление карнизов, жалюзи, рулонных штор и штор плиссе, разработка дизайна и пошив штор, монтаж карнизов и солнцезащитных систем, навешивание штор.
